<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text1"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="65dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text2"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="47dp" />

    <EditText
        android:layout_width="@dimen/abc_action_bar_stacked_max_height"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/num1"
        android:layout_alignTop="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:numeric="integer"
        android:editable="true" />

    <EditText
        android:layout_width="@dimen/abc_action_bar_stacked_max_height"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/num2"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignStart="@+id/num1"
        android:editable="true"
        android:numeric="integer"
        android:textAlignment="center" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/butcambar"
        android:id="@+id/button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/num1"
        android:layout_toEndOf="@+id/num1"
        android:onClick="cambiar"/>

    <Button
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="wrap_content"
        android:text="@string/butmas"
        android:id="@+id/button2"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/result"
        android:onClick="sumar"/>

    <Button
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="wrap_content"
        android:text="@string/butmenos"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/button2"
        android:layout_toStartOf="@+id/num2"
        android:onClick="restar"/>

    <Button
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="wrap_content"
        android:text="@string/butpor"
        android:id="@+id/button4"
        android:layout_alignTop="@+id/button3"
        android:layout_toEndOf="@+id/num2"
        android:onClick="multiplicar"/>

    <Button
        android:layout_width="@dimen/abc_action_bar_default_height_material"
        android:layout_height="wrap_content"
        android:text="@string/butdiv"
        android:id="@+id/button5"
        android:layout_alignTop="@+id/button4"
        android:layout_toEndOf="@+id/result"
        android:onClick="dividir"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/result"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp" />

</RelativeLayout>
